# notes

./: 6.828.org  Windows.org  ahk.org  alias.txt  bash.org  bitmask.txt  clash for linux.txt  cmake.org  colorlist.css  cook.txt  cpp.org  cppcodestyle.org  cppcontainer.org  cppgeneric.org  cppstring.org  cppthread.org  cygwin.org  detours.org  device-number  docker.org  encoding.org  env.org  expect.org  exploit.org  ffmpeg.org  fullstack.txt  gcc.org  gdb.org  git-svn.org  git.turorial.org  googletest.org  goolesearch.txt  grep-sed.org  installemacs.sh  ios-workflow.org  jenkins.org  jot.md  llm.copy.org  loadbalance.md  makefile.org  (+24 more)
ansible/: ansible.org  copytoRemoteLocal.yml  factsLoop.yml  modifyfile.yml
bashscript/: bash-snippet.org  bashSimpleMenu.sh  change_ip_kvm.sh  crontab  kvm.org
cpp/: encoding.org  file.org  grpc.org  mysql.org  spinlock.md  stl.org  yaodian.org
cpp/grpc/helloworld/: CMakeLists.txt  client.cpp  readme.txt  server.cpp
db/: db.org  sql.org
emacs/: elisp.org  emacs-tourial.org  emacs.org  myemacs.org  navigation.org  neovim.org  org.org  py.org  register.org  vim.org
history/: c.org  cpp.org  crontab  g++.org  macosx.org  monetdb.org  vba.org  win_programming.org
hugginface/: qwenapp.py  sst-2-english.py
js/: await.md  call_apply_bind.org  color.org  eslint.org  glob.md  jsencrypt_node.js  mongoose.md  promise.md  redis.org  scope.org  this.org  trap.org  ts.md  typescript.org
linux/: arm.md  bash.org  bash_snippet.org  linux.org  linux2.org  nmap.org  ubuntu.org  waitfor.sh
node/: node-debug.md  node.org  npm.org  pm2.org  (+3 more)
(+72 files in other folders)
